plugin/core/gen/com/perl5/lang/pod/parser/PodParser.java
// This is a generated file. Not intended for manual editing.
package com.perl5.lang.pod.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.perl5.lang.pod.lexer.PodElementTypesGenerated.*;
import static com.perl5.lang.pod.parser.PodParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class PodParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return root(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // pod_section
  // 	| over_section
  // 	| pod_format_indexes
  // //	| begin_section
  // 	| for_section
  // 	| encoding_section
  // 	| unknown_section
  // 	| cut_section
  // 	| pod_paragraph
  // 	| pod_verbatim_paragraph
  // 	| 'NL'+
  static boolean any_level_item(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "any_level_item")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = pod_section(builder_, level_ + 1);
    if (!result_) result_ = over_section(builder_, level_ + 1);
    if (!result_) result_ = pod_format_indexes(builder_, level_ + 1);
    if (!result_) result_ = for_section(builder_, level_ + 1);
    if (!result_) result_ = encoding_section(builder_, level_ + 1);
    if (!result_) result_ = unknown_section(builder_, level_ + 1);
    if (!result_) result_ = cut_section(builder_, level_ + 1);
    if (!result_) result_ = pod_paragraph(builder_, level_ + 1);
    if (!result_) result_ = pod_verbatim_paragraph(builder_, level_ + 1);
    if (!result_) result_ = any_level_item_9(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // 'NL'+
  private static boolean any_level_item_9(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "any_level_item_9")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, POD_NEWLINE);
    while (result_) {
      int pos_ = current_position_(builder_);
      if (!consumeToken(builder_, POD_NEWLINE)) break;
      if (!empty_element_parsed_guard_(builder_, "any_level_item_9", pos_)) break;
    }
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // '=begin' parse_begin_section_content begin_section_closer
  public static boolean begin_section(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "begin_section")) return false;
    if (!nextTokenIs(builder_, POD_BEGIN)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BEGIN_SECTION, null);
    result_ = consumeToken(builder_, POD_BEGIN);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, parse_begin_section_content(builder_, level_ + 1));
    result_ = pinned_ && begin_section_closer(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // '=end' pod_section_format 'NL'*
  static boolean begin_section_closer(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "begin_section_closer")) return false;
    if (!nextTokenIs(builder_, POD_END)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = consumeToken(builder_, POD_END);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, pod_section_format(builder_, level_ + 1));
    result_ = pinned_ && begin_section_closer_2(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // 'NL'*
  private static boolean begin_section_closer_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "begin_section_closer_2")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!consumeToken(builder_, POD_NEWLINE)) break;
      if (!empty_element_parsed_guard_(builder_, "begin_section_closer_2", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // {pod_term|'NL'}*
  public static boolean begin_section_content(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "begin_section_content")) return false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BEGIN_SECTION_CONTENT, "<begin section content>");
    while (true) {
      int pos_ = current_position_(builder_);
      if (!begin_section_content_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "begin_section_content", pos_)) break;
    }
    exit_section_(builder_, level_, marker_, true, false, recover_begin_section_parser_);
    return true;
  }

  // pod_term|'NL'
  private static boolean begin_section_content_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "begin_section_content_0")) return false;
    boolean result_;
    result_ = pod_term(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, POD_NEWLINE);
    return result_;
  }

  /* ********************************************************** */
  // '=cut' [parse_section_title] 'NL'*
  public static boolean cut_section(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cut_section")) return false;
    if (!nextTokenIs(builder_, POD_CUT)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CUT_SECTION, null);
    result_ = consumeToken(builder_, POD_CUT);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, cut_section_1(builder_, level_ + 1));
    result_ = pinned_ && cut_section_2(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // [parse_section_title]
  private static boolean cut_section_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cut_section_1")) return false;
    parse_section_title(builder_, level_ + 1);
    return true;
  }

  // 'NL'*
  private static boolean cut_section_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cut_section_2")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!consumeToken(builder_, POD_NEWLINE)) break;
      if (!empty_element_parsed_guard_(builder_, "cut_section_2", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // {&formatting_section_allowed_tokens pod_term}+
  static boolean default_formatting_section_item(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "default_formatting_section_item")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = default_formatting_section_item_0(builder_, level_ + 1);
    while (result_) {
      int pos_ = current_position_(builder_);
      if (!default_formatting_section_item_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "default_formatting_section_item", pos_)) break;
    }
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // &formatting_section_allowed_tokens pod_term
  private static boolean default_formatting_section_item_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "default_formatting_section_item_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = default_formatting_section_item_0_0(builder_, level_ + 1);
    result_ = result_ && pod_term(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // &formatting_section_allowed_tokens
  private static boolean default_formatting_section_item_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "default_formatting_section_item_0_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _AND_);
    result_ = formatting_section_allowed_tokens(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // '=encoding' <<collapseNonSpaceTo 'POD_ENCODING_NAME '>> 'NL'+
  public static boolean encoding_section(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "encoding_section")) return false;
    if (!nextTokenIs(builder_, POD_ENCODING)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ENCODING_SECTION, null);
    result_ = consumeToken(builder_, POD_ENCODING);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, collapseNonSpaceTo(builder_, level_ + 1, POD_ENCODING_NAME ));
    result_ = pinned_ && encoding_section_2(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // 'NL'+
  private static boolean encoding_section_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "encoding_section_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, POD_NEWLINE);
    while (result_) {
      int pos_ = current_position_(builder_);
      if (!consumeToken(builder_, POD_NEWLINE)) break;
      if (!empty_element_parsed_guard_(builder_, "encoding_section_2", pos_)) break;
    }
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // {'=for'|'=begin'|'=end'} parse_for_section_content 'NL'*
  public static boolean for_section(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "for_section")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FOR_SECTION, "<for section>");
    result_ = for_section_0(builder_, level_ + 1);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, parse_for_section_content(builder_, level_ + 1));
    result_ = pinned_ && for_section_2(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // '=for'|'=begin'|'=end'
  private static boolean for_section_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "for_section_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, POD_FOR);
    if (!result_) result_ = consumeToken(builder_, POD_BEGIN);
    if (!result_) result_ = consumeToken(builder_, POD_END);
    return result_;
  }

  // 'NL'*
  private static boolean for_section_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "for_section_2")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!consumeToken(builder_, POD_NEWLINE)) break;
      if (!empty_element_parsed_guard_(builder_, "for_section_2", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // pod_term *
  public static boolean for_section_content(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "for_section_content")) return false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FOR_SECTION_CONTENT, "<for section content>");
    while (true) {
      int pos_ = current_position_(builder_);
      if (!pod_term(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "for_section_content", pos_)) break;
    }
    exit_section_(builder_, level_, marker_, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // !('NL'|'>')
  static boolean formatting_section_allowed_tokens(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "formatting_section_allowed_tokens")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !formatting_section_allowed_tokens_0(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // 'NL'|'>'
  private static boolean formatting_section_allowed_tokens_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "formatting_section_allowed_tokens_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, POD_NEWLINE);
    if (!result_) result_ = consumeToken(builder_, POD_ANGLE_RIGHT);
    return result_;
  }

  /* ********************************************************** */
  // <<x1>>
  public static boolean formatting_section_content(PsiBuilder builder_, int level_, Parser x1) {
    if (!recursion_guard_(builder_, level_, "formatting_section_content")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = x1.parse(builder_, level_);
    exit_section_(builder_, marker_, FORMATTING_SECTION_CONTENT, result_);
    return result_;
  }

  /* ********************************************************** */
  // '=head1' [ parse_section_title [head1_section_content]]
  public static boolean head1_section(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head1_section")) return false;
    if (!nextTokenIs(builder_, POD_HEAD1)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, HEAD_1_SECTION, null);
    result_ = consumeToken(builder_, POD_HEAD1);
    pinned_ = result_; // pin = 1
    result_ = result_ && head1_section_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // [ parse_section_title [head1_section_content]]
  private static boolean head1_section_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head1_section_1")) return false;
    head1_section_1_0(builder_, level_ + 1);
    return true;
  }

  // parse_section_title [head1_section_content]
  private static boolean head1_section_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head1_section_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = parse_section_title(builder_, level_ + 1);
    result_ = result_ && head1_section_1_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // [head1_section_content]
  private static boolean head1_section_1_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head1_section_1_0_1")) return false;
    head1_section_content(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // head1_section_item *
  public static boolean head1_section_content(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head1_section_content")) return false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, HEAD_1_SECTION_CONTENT, "<head 1 section content>");
    while (true) {
      int pos_ = current_position_(builder_);
      if (!head1_section_item(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "head1_section_content", pos_)) break;
    }
    exit_section_(builder_, level_, marker_, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // head2_section | head3_section | head4_section | any_level_item
  static boolean head1_section_item(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head1_section_item")) return false;
    boolean result_;
    result_ = head2_section(builder_, level_ + 1);
    if (!result_) result_ = head3_section(builder_, level_ + 1);
    if (!result_) result_ = head4_section(builder_, level_ + 1);
    if (!result_) result_ = any_level_item(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // '=head2' [parse_section_title [head2_section_content]]
  public static boolean head2_section(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head2_section")) return false;
    if (!nextTokenIs(builder_, POD_HEAD2)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, HEAD_2_SECTION, null);
    result_ = consumeToken(builder_, POD_HEAD2);
    pinned_ = result_; // pin = 1
    result_ = result_ && head2_section_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // [parse_section_title [head2_section_content]]
  private static boolean head2_section_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head2_section_1")) return false;
    head2_section_1_0(builder_, level_ + 1);
    return true;
  }

  // parse_section_title [head2_section_content]
  private static boolean head2_section_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head2_section_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = parse_section_title(builder_, level_ + 1);
    result_ = result_ && head2_section_1_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // [head2_section_content]
  private static boolean head2_section_1_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head2_section_1_0_1")) return false;
    head2_section_content(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // head2_section_item *
  public static boolean head2_section_content(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head2_section_content")) return false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, HEAD_2_SECTION_CONTENT, "<head 2 section content>");
    while (true) {
      int pos_ = current_position_(builder_);
      if (!head2_section_item(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "head2_section_content", pos_)) break;
    }
    exit_section_(builder_, level_, marker_, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // head3_section | head4_section | any_level_item
  static boolean head2_section_item(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head2_section_item")) return false;
    boolean result_;
    result_ = head3_section(builder_, level_ + 1);
    if (!result_) result_ = head4_section(builder_, level_ + 1);
    if (!result_) result_ = any_level_item(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // '=head3' [parse_section_title [head3_section_content]]
  public static boolean head3_section(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head3_section")) return false;
    if (!nextTokenIs(builder_, POD_HEAD3)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, HEAD_3_SECTION, null);
    result_ = consumeToken(builder_, POD_HEAD3);
    pinned_ = result_; // pin = 1
    result_ = result_ && head3_section_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // [parse_section_title [head3_section_content]]
  private static boolean head3_section_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head3_section_1")) return false;
    head3_section_1_0(builder_, level_ + 1);
    return true;
  }

  // parse_section_title [head3_section_content]
  private static boolean head3_section_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head3_section_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = parse_section_title(builder_, level_ + 1);
    result_ = result_ && head3_section_1_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // [head3_section_content]
  private static boolean head3_section_1_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "head3_section_1_0_1")) return false;
    head3_section_content(builder_, level_ + 1);
    return true;
  }
